# limo_drive_ws

./: README.md  frames_2025-11-27_17.52.31.gv  frames_2025-11-27_17.56.25.gv  frames_2025-11-27_18.04.05.gv
Log/: OrbbecSDK.log.txt
install/: local_setup.sh  setup.sh
install/grid_map/share/grid_map/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/grid_map_cmake_helpers/share/grid_map_cmake_helpers/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/grid_map_core/share/grid_map_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/grid_map_costmap_2d/share/grid_map_costmap_2d/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/grid_map_cv/share/grid_map_cv/: filter_plugins.xml  local_setup.bash  local_setup.dsv  (+4 more)
log/: latest_build
src/remo_navigation/: CMakeLists.txt
src/remo_navigation/config/: nav2_params.yaml  nav2_params_slam.yaml  slam_toolbox.yaml
src/remo_navigation/launch/: autonomous_navigation.launch.py  autonomous_navigation_limo.launch.py  navigation.launch.py  slam.launch.py
src/remo_navigation/rviz/: autonomy_view.rviz
src/remo_navigation/scripts/: activate_nav2_nodes.py  risk_costmap_to_pc2.py  yolo_location_saver.py
src/remo_navigation/src/: grid_map_costmap_converter.py
src/terrain_analysis/: package.xml  setup.cfg  setup.py
src/terrain_analysis/terrain_analysis/: terrain_analysis_node.py  terrain_analysis_node_limo.py
(+431 files in other folders)
